# bitlite

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmd.txt  hello.txt  package-lock.json  server.js  server.py
include/: bencode.hpp  file_manager.hpp  message_parser.hpp  network.hpp  torrent_creator.hpp  torrent_parser.hpp  wifi_connect.hpp
src/: bencode.cpp  file_manager.cpp  main.cpp  network.cpp  torrent_creator.cpp  torrent_parser.cpp  wificonnect.cpp
